--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="utf-8" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{commons/commons::head}"></div>
 
 <div class="container body-signin text-center">
     <div class="row">
         <div class="col-md-12">
             <form class="form-signin" th:action="@{/user/login}" method="post">
-                <img class="mb-4" src="/img/logo.png" alt=""><span style="font-size: 32px;"> Java漏洞平台</span>
+                <span style="font-size: 32px;"> Web Injection Test System </span>
 
                 <p th:text="${msg}"></p>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" name="username" placeholder="用户名" required="">
+                    <input type="text" class="form-control" name="username" placeholder="UserName:" required="">
                 </div>
 
                 <div class="form-group">
-                    <input type="password" class="form-control" name="password" placeholder="密码" required="">
+                    <input type="password" class="form-control" name="password" placeholder="Password:" required="">
                 </div>
 
                 <div class="form-group form-inline">
-                    <input type="text" name="captcha" class="form-control" placeholder="验证码"
+                    <input type="text" name="captcha" class="form-control" placeholder="Enter Code:"
                            style="width: 66%">&nbsp;&nbsp;<img
                         src="/captcha" style="width: 30%;height: 48px" onclick="this.src='/captcha?d='+Math.random()"
                         alt=""/>
@@ -32,7 +32,7 @@
                     </label>
                 </div>
 
-                <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
 
             </form>
 
