--- a/src/main/resources/templates/xss_reflect.html
+++ b/src/main/resources/templates/xss_reflect.html
@@ -50,136 +50,40 @@
 
             <div class="box-float">
                 <div class="float1">
-                    <a style="float:right" class="btn btn-sm btn-danger" target="_blank"
+                    <!-- <a style="float:right" class="btn btn-sm btn-danger" target="_blank"
                        th:href="@{/XSS/reflect?content=test%3Cscript%3E%0A%20%20%20%20window.onload=function()%20%7B%0A%20%20%20%20%20%20%20%20document.bgColor%20=%20%22black%22;%0A%20%20%20%20%20%20%20%20document.body.innerHTML=%22%3Cfont%20color=white%20size=40%3E%E4%BD%A0%E8%A2%ABXSS%E9%BB%91%E4%BA%86%EF%BC%81%3C/font%3E%22%0A%20%20%20%20%7D%0A%3C/script%3E}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-bug"> 漏洞代码</span></h5>
+                       
+                        <span class="align-middle"> Submit</span></a> -->
+                    <h5><span class="lnr lnr-bug"> Test</span></h5>
+                    
+                    
 
-                    <label for="code1"></label><textarea class="form-control" id="code1">
-// 简单的反射型XSS，没对输出做处理。当攻击者输入恶意js语句时可触发
-
-@GetMapping("/reflect")
-public static String input(String content) {
-    return content;
-}
-                    </textarea><br><br>
-
-
-                    <a style="float:right" class="btn btn-sm btn-success text-right" target="_blank"
-                       th:href="@{/XSS/escape?content=test<script>alert(1)</script>}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-smile"> 安全代码 - htmlEscape方法</span></h5>
-
-                    <label for="code2"></label><textarea class="form-control" id="code2">
-// 采用Spring自带的方法会对特殊字符全转义
-
-import org.springframework.web.util.HtmlUtils;
-
-@GetMapping("/safe1")
-public static String safe1(String content) {
-    return HtmlUtils.htmlEscape(content);
-}
-                    </textarea><br><br>
-
-                    <a style="float:right" class="btn btn-sm btn-success text-right" target="_blank"
-                       th:href="@{/XSS/owaspEncoder?content=test<script>alert(1)</script>}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-smile"> 安全代码 - OWASP Java Encoder</span></h5>
-
-                    <label for="code2"></label><textarea class="form-control" id="code6">
-// 采用OWASP Java Encoder会对特殊字符全转义
-
-import org.owasp.encoder.Encode;
-public static String safe5(String content){
-    return Encode.forHtml(content);
-}
-                    </textarea><br><br>
-
+                 <br><br>   
+                 
+                 <span style = 'font-size:20px'>Please input your name: </span>     
+                 <input type = 'text' id = 'nameinput'/>        
+                 <input type = 'button' value = 'submit' onclick = 'submitToBack()'/>
+                 <br/><br/>
+                 
+                 <div style= ' font-size:20px'>Your input is : </div>
+                 <div style= 'color:red; font-size:20px' id = 'myDiv'/></div>
+                 
                 </div>
 
-                <div class="float2">
-
-                    <a style="float:right" class="btn btn-sm btn-success text-right" target="_blank"
-                       th:href="@{/XSS/filter?content=test<script>alert(1)</script>}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-smile"> 安全代码 - 自定义过滤</span></h5>
-                    <label for="code3"></label><textarea class="form-control" id="code3">
-// 将特殊字符做转义
-
-private static String XssFilter(String content) {
-    content = StringUtils.replace(content, "&", "&ampamp;");
-    content = StringUtils.replace(content, "<", "&amplt;");
-    content = StringUtils.replace(content, ">", "&ampgt;");
-    content = StringUtils.replace(content, "\", "&ampquot;");
-    content = StringUtils.replace(content, "'", "&amp#x27;");
-    content = StringUtils.replace(content, "/", "&amp#x2F;");
-    return content;
-}
-                    </textarea><br><br>
-
-                    <a style="float:right" class="btn btn-sm btn-success text-right" target="_blank"
-                       th:href="@{/XSS/whitelist?content=aaa<img%20src=1%20onerror=alert(1)>}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-smile"> 安全代码 - 黑白名单</span></h5>
-                    <label for="code4"></label><textarea class="form-control" id="code4">
-// 场景：针对富文本的处理方式，需保留部分标签
-
-import org.jsoup.Jsoup;
-import org.jsoup.safety.Safelist;
-
-public static String safe3(String content) {
-    Safelist whitelist = (new Safelist())
-           .addTags("p", "hr", "div", "img", "span", "textarea")  // 设置允许的标签
-           .addAttributes("a", "href", "title")          // 设置标签允许的属性, 避免如nmouseover属性
-           .addProtocols("img", "src", "http", "https")  // img的src属性只允许http和https开头
-           .addProtocols("a", "href", "http", "https");
-    return Jsoup.clean(content, whitelist);
-}
-                    </textarea><br><br>
-
-                    <a style="float:right" class="btn btn-sm btn-success text-right" target="_blank"
-                       th:href="@{/XSS/esapi?content=aaa<img%20src=1%20onerror=alert(1)>}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-smile"> 安全代码 - ESAPI</span></h5>
-                    <label for="code5"></label><textarea class="form-control" id="code5">
-// ESAPI 是一个免费、开源的、网页应用程序安全控件库，它使程序员能够更容易写出更低风险的程序
-// 官网：https://owasp.org/www-project-enterprise-security-api/
-
-import org.owasp.esapi.ESAPI;
-public static String safe4(String content){
-    return ESAPI.encoder().encodeForHTML(content);
-}
-                    </textarea>
-                </div>
-
+              
             </div>
         </main>
     </div>
 </div>
+
+
+<script>
+function submitToBack(){	
+var data = document.getElementById('nameinput').value;
+$('#myDiv').html(data);
+
+}
+</script>
 
 <!-- 引入script -->
 <div th:replace="~{commons/commons::script}"></div>
