--- a/src/main/resources/templates/xss_reflect.html
+++ b/src/main/resources/templates/xss_reflect.html
@@ -79,6 +79,7 @@
 
 <script>
 function submitToBack(){	
+// window.location.href = "http://www.google.com" 
 var data = document.getElementById('nameinput').value;
 $('#myDiv').html(data);
 
