--- a/src/main/resources/templates/sqli_mybatis.html
+++ b/src/main/resources/templates/sqli_mybatis.html
@@ -3,6 +3,27 @@
 <div th:replace="~{commons/commons::head}"></div>
 
 <body>
+
+<script>
+   function submitFun() {
+    	var inputdata = $('#qinput').val();
+        $.ajax({
+            url: '/SQLI/MyBatis/vul/search',
+            method: 'GET',
+            dataType:"json",
+            data: {
+            	"q": inputdata
+            },
+            success: function (data) {
+            	$('#sqlTableVul tbody').empty();
+                $.each(data, function (index, item) {
+                    $('#sqlTableVul tbody').append('<tr><td>' + item.id + '</td><td>' + item.user + '</td><td><span class="lnr lnr-trash"></span></button></td></tr>');
+                });
+            }
+        });
+    }
+</script>
+
 <!-- 顶部导航栏 -->
 <div th:replace="~{commons/commons::topbar}"></div>
 
@@ -39,116 +60,42 @@ MyBatis will create PreparedStatement parameter placeholders and safely set para
             <hr>
 
             <div class="box-float">
-                <div class="float1">
-                    <a target="_blank" style="float:right" class="btn btn-sm btn-danger"
-                       href="/SQLI/MyBatis/vul/order?field=id&sort=desc,abs(111111)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-bug"> 漏洞代码 - order by 注入</span></h5>
-                    <label for="code1"></label><textarea class="form-control" id="code1">
-// 由于使用#{}会将对象转成字符串，形成order by "user" desc造成错误，因此很多研发会采用${}来解决，从而造成SQL注入
-
-@GetMapping("/vul/order")
-public List<User> orderBy(String field, String sort) {
-    return userMapper.orderBy(field, sort);
-}
-
-// xml方式
-<select id="orderBy" resultType="com.best.hello.entity.User">
-    select * from users order by ${field} ${sort}
-</select>
-
-// 注解方式
-@Select("select * from users order by ${field} desc")
-List<User> orderBy2(@Param("field") String field);
-                    </textarea><br><br>
-
-                    <h5><span class="lnr lnr-bug"> 漏洞代码 - 搜索框注入</span></h5>
-                    <form role="search" th:action="@{/SQLI/MyBatis/vul/search}" method="get" target="_blank">
+                <div class="float1">                   
+                    <h5><span class="lnr lnr-bug"> Input user name and click search</span></h5>
+                    <br/>
+                    <div>Use the following script to attack : </div>
+                    <div> test%' union select 1,@@version_compile_os # </div>
+                    <div> test%' union select 1,user() # </div>
+                    <br/>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" name="q"
-                                   value="test%' union select 1,user(),@@version_compile_os-- " style="color: #b5babb">
+                            <input type="text" class="form-control" id="qinput"
+                                   value="" style="color: #b5babb">
                             <div class="input-group-append">
-                                <button class="btn btn-sm btn-danger" type="submit">搜索</button>
+                                <button class="btn btn-sm btn-danger" id = 'searchButton' onclick= "submitFun()">search</button>
                             </div>
-                        </div>
-                    </form>
-                    <label for="code2"></label><textarea class="form-control" id="code2">
-// 模糊搜索时，直接使用'%#{q}%' 会报错，部分研发图方便直接改成'%${q}%'从而造成注入
-
-@Select("select * from users where user like '%${q}%'")
-List<User> search(String q);
-
-// 安全代码,采用concat
-@Select("select * from users where user like concat('%',#{q},'%')")
-List<User> search(String q);
-                    </textarea>
-
-                </div>
-
-                <div class="float2">
-                    <a target="_blank" style="float:right" class="btn btn-sm btn-success"
-                       href="/SQLI/MyBatis/safe/order?field=id">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-smile"> 安全代码 - 排序映射</span></h5>
-                    <label for="code3"></label><textarea class="form-control" id="code3">
-<select id="orderBySafe" resultType="com.best.hello.entity.User">
-    select * from users
-    <choose>
-        <when test="field == 'id'">
-            order by id desc
-        </when>
-        <when test="field == 'user'">
-            order by user desc
-        </when>
-        <otherwise>
-            order by id desc
-        </otherwise>
-    </choose>
-</select>
-                    </textarea><br><br>
-
-                    <a target="_blank" style="float:right" class="btn btn-sm btn-success"
-                       href="/SQLI/MyBatis/safe/id/1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-smile"> 安全代码 - 强制类型</span></h5>
-                    <label for="code4"></label><textarea class="form-control" id="code4">
-// 使用 ${} 本身是存在注入的，但由于强制使用Integer或long类型导致注入无效（无法注入字符串）
-
-@Select("select * from users where id = ${id}")
-List<User> queryById2(@Param("id") Integer id);
-                    </textarea><br><br>
-
-                    <a target="_blank" style="float:right" class="btn btn-sm btn-success"
-                       href="/SQLI/MyBatis/safe/query?user=admin">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
-                             viewBox="0 0 16 16">
-                            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                        </svg>
-                        <span class="align-middle"> Run</span></a>
-                    <h5><span class="lnr lnr-smile"> 安全代码 - 使用#{}</span></h5>
-                    <label for="code5"></label><textarea class="form-control" id="code5">
-// 使用 #{} 安全编码
-
-@Select("select * from users where user like CONCAT('%', #{user}, '%')")
-List<User> queryByUser(@Param("user") String user);
-                    </textarea>
-                </div>
-            </div>
+                        </div>   
+                        
+                         <div class="form-group">
+                                    <table class="table table-striped table-bordered table-sm" id="sqlTableVul">
+                                        <thead>
+                                        <tr>
+                                            <th>UserId</th>
+                                            <th>UserName</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        </tbody>
+                                    </table>
+                                </div>                     
+                    
+                   </div>
+                  
+			</div>
+            
         </main>
     </div>
 </div>
+
 
 <!-- 引入script -->
 <div th:replace="~{commons/commons::script}"></div>
