--- a/src/main/resources/templates/xss_store.html
+++ b/src/main/resources/templates/xss_store.html
@@ -50,7 +50,7 @@ Control the Cookie field for user login authentication, and set the HttpOnly att
             <div class="box-float">
                 <div class="float1">
                     <h5><span class="lnr lnr-bug"> Test</span></h5>
-                   <!--  <div class="container">
+                    <div class="container">
                         <div class="card">
                             <div class="card-body">
                                 <div class="input-group">
@@ -76,7 +76,7 @@ Control the Cookie field for user login authentication, and set the HttpOnly att
                                 </div>
                             </div>
                         </div>
-                    </div>                   -->
+                    </div>                  
                 </div>              
             </div>
         </main>
@@ -97,7 +97,7 @@ Control the Cookie field for user login authentication, and set the HttpOnly att
         // 处理响应
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4 && xhr.status == 200) {
-                alert("提交成功")
+                //alert("提交成功")
                 location.reload();
             }
         };
